<resources>
    <string name="app_name">ALC 4 Android</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="track_android">  Track : Android</string>
    <string name="country_kenya">  Country : Kenya</string>
    <string name="email">  Email : ivonelucky@gmail.com</string>
    <string name="phone_number">  Phone number: +254712483360</string>
    <string name="slack_name">  slack Username : Ivone Owuor</string>
    <string name="owuor_ivone_atieno">Owuor Ivone Atieno</string>
    <string name="email_ivonelucky_gmail_com">Email : ivonelucky@gmail.com</string>
    <string name="phone_number_254712483360">Phone number: +254712483360</string>
    <string name="slack_username_ivone_owuor">slack Username: Ivone Owuor</string>
    <string name="ivone">Ivone</string>
</resources>
