<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lblue"
    tools:context=".My_profile">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="259dp"
        android:layout_height="218dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="396dp"
        android:src="@drawable/ivone"
        android:contentDescription="@string/ivone" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="329dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="348dp"
        android:text="@string/owuor_ivone_atieno"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="215dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="273dp"
        android:text="@string/track_android"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="229dp"
        android:text="@string/country_kenya"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="323dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="182dp"
        android:text="@string/email_ivonelucky_gmail_com"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="141dp"
        android:text="@string/phone_number_254712483360"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="96dp"
        android:text="@string/slack_username_ivone_owuor"
        android:textColor="@color/black"
        android:textSize="20sp" />
</RelativeLayout>